# rafters-2d

./: README.md  package-lock.json  package.json
src/: App.jsx  utils.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: beam.rs  birds_mouth.rs  cli.rs  lib.rs  main.rs  rafter.rs  right_angle.rs  tail.rs  utils.rs
src/components/: app_bar.jsx  dimensions_layer.jsx  drawer.jsx  rafter_2d.jsx  rafter_input.jsx  rafter_table.jsx  trianglesLayer.jsx  triangles_layer.jsx  walls_layer.jsx
src/stores/: app.js  rafter_data.js
