[package]
name = "rafters-2d"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["David Skyberg <davidskyberg@gmail.com>"]
description = "A Rust Tauri app for calculating roof rafters"
repository = "https://github.com/dskyberg/round_to"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rafters_2d_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
anyhow = "1.0.97"
rafter_lib = { git = "https://github.com/dskyberg/rafter_lib" }
